Week01: executed reproduce; generated reports/week01 + figures/week01; updated experiments log

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
-# Big artifacts, data, and caches
+# heavy / local
 experiment_archive/
-results/
 hf_cache/
 data/
-*.jsonl
-*.pkl
-*.log
-
-# Python temporary files
-__pycache__/
+reports/**/summary.md
+**/.ipynb_checkpoints/
 *.pyc
-
-# Docker image files
-*.tar.gz
+__pycache__/
